# serializer version: 1
# name: test_export[collection_1]
  dict({
    'content': '''
      * [[sample-invoice (1)]]
      * [[wordpress-pdf-invoice-plugin-sample (2)]]
      * [[sample-invoice (3)]]
      * [[missing (4)]]
      * [[pdf-test (5)]]
      * [[drylab (6)]]
      * [[invoicesample (7)]]
      * [[PDF_TestPage (8)]]
      * [[Get_Started_With_Smallpdf (9)]]
      * [[Free_Test_Data_100KB_PDF (10)]]
      * [[test_pdf_acrobat (11)]]
      * [[sample_ _with_ special characters _o_ _ (12)]]
      * [[file-sample_150kB_mit_ü (13)]]
    ''',
  })
# ---
# name: test_export[collection_2]
  dict({
    'content': '* [[sample-invoice (1)]]',
  })
# ---
# name: test_export[collection_3]
  dict({
    'content': '* [[sample-invoice (1)]]',
  })
# ---
# name: test_export[collection_4]
  dict({
    'content': '''
      * [[pdf-test (5)]]
      * [[drylab (6)]]
      * [[invoicesample (7)]]
      * [[PDF_TestPage (8)]]
      * [[Get_Started_With_Smallpdf (9)]]
      * [[Free_Test_Data_100KB_PDF (10)]]
      * [[test_pdf_acrobat (11)]]
    ''',
  })
# ---
# name: test_export[document_10]
  dict({
    'Collection paths': list([
      'New Test PDFs',
    ]),
    'Date': '2025-05-01',
    'Import date': '2025-05-01T10:03:29.751724+00:00',
    'OCR result': '''
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec iaculis elit nec ante eleifend,
      eget cursus tortor auctor. Integer at ultrices lorem, eget bibendum turpis. Praesent lacus
      sapien, ullamcorper gravida suscipit eu, pharetra et eros. Integer interdum dictum volutpat.
      Nulla pellentesque ante vitae sapien luctus ornare. Ut a risus quis diam rhoncus rhoncus.
      Integer tortor lorem, vulputate non tempus eu, suscipit id tellus. In laoreet sollicitudin quam, et
      condimentum justo ultrices eget. Pellentesque hendrerit suscipit diam ac porttitor. Aenean
      dictum id magna vel venenatis. In rhoncus tempus libero, sed consectetur nibh ultrices nec.
      Aenean pulvinar euismod ligula at lacinia. Ut consectetur dui ipsum, a rhoncus lacus gravida
      vitae. In mollis tortor in libero lobortis molestie. Integer tempor justo ligula, eu euismod lectus
      fringilla eu. Proin vestibulum sodales tristique. Pellentesque pretium, nibh et aliquet
      scelerisque, felis nulla lobortis tellus, at tristique libero ipsum a leo. Nulla mauris turpis, feugiat
      eu lacus eu, eleifend malesuada lorem. Praesent quis justo ligula. Cras quam risus, ultricies at
      odio accumsan, maximus eleifend justo. Sed sed convallis elit. In finibus congue mauris at
      venenatis. Praesent pellentesque lacus eros, nec auctor neque semper eget. Sed vehicula
      ornare efficitur. Donec magna felis, ullamcorper et euismod eget, facilisis sed nibh.
      1 2 3 4
      5 6 7 8
      9 10 11 12
      13 14 15 16
      Fusce efficitur mi ex. Quisque elementum elementum odio, a accumsan nibh consectetur sed.
      Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc a feugiat urna. Integer sit
      amet tincidunt mauris. Donec id urna nec turpis laoreet aliquam ac id ante. Curabitur faucibus
      consectetur velit, vitae efficitur odio facilisis sed.
      Aenean pulvinar euismod ligula at lacinia. Ut consectetur dui ipsum, a rhoncus lacus gravida
      vitae. In mollis tortor in libero lobortis molestie. Integer tempor justo ligula, eu euismod lectus
      fringilla eu. Proin vestibulum sodales tristique. Pellentesque pretium, nibh et aliquet
      scelerisque, felis nulla lobortis tellus, at tristique libero ipsum a leo. Nulla mauris turpis, feugiat
      eu lacus eu, eleifend malesuada lorem. Praesent quis justo ligula. Cras quam risus, ultricies at
      odio accumsan, maximus eleifend justo. Sed sed convallis elit. In finibus congue mauris at
      venenatis. Praesent pellentesque lacus eros, nec auctor neque semper eget. Sed vehicula
      ornare efficitur. Donec magna felis, ullamcorper et euismod eget, facilisis sed nibh.
      Vestibulum fermentum augue a lacus mattis condimentum. Sed ligula lacus, faucibus non
      suscipit sed, volutpat id nisl. Orci varius natoque penatibus et magnis dis parturient montes,
      nascetur ridiculus mus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
      inceptos himenaeos. Etiam et facilisis nibh, sagittis vulputate magna. Morbi iaculis placerat
      mauris eu sollicitudin. Nam ac varius sem, sit amet dictum tortor. Etiam finibus metus lacus. Ut
      tincidunt, lacus vel rhoncus viverra, enim purus sollicitudin lacus, id vulputate ante felis ut ante.
      Integer non purus feugiat, blandit lorem ut, elementum lectus. Sed condimentum accumsan
      arcu vel vehicula.
      1 2 3 4
      5 6 7 8
      9 10 11 12
      13 14 15 16
      Aenean pulvinar euismod ligula at lacinia. Ut consectetur dui ipsum, a rhoncus lacus gravida
      vitae. In mollis tortor in libero lobortis molestie. Integer tempor justo ligula, eu euismod lectus
      fringilla eu. Proin vestibulum sodales tristique. Pellentesque pretium, nibh et aliquet
      scelerisque, felis nulla lobortis tellus, at tristique libero ipsum a leo. Nulla mauris turpis, feugiat
      eu lacus eu, eleifend malesuada lorem. Praesent quis justo ligula. Cras quam risus, ultricies.
    ''',
    'Original filename': 'Free_Test_Data_100KB_PDF.pdf',
    'Type': 'Document',
    'content': '''
      #### document
      ![[linked_attachment.document.pdf]]
      #### original
      ![[linked_attachment.original.pdf]]
    ''',
    'tags': list([
      'new-test-pdfs',
      'paperless',
      'paperless/missing/document',
      'paperless/type/document',
    ]),
  })
# ---
# name: test_export[document_11]
  dict({
    'Collection paths': list([
      'New Test PDFs',
    ]),
    'Date': '2025-05-01',
    'Import date': '2025-05-01T10:03:30.255227+00:00',
    'OCR result': '''
      This is a test PDF document.
      If you can read this, you have Adobe Acrobat Reader installed on your computer.
    ''',
    'Original filename': 'test_pdf_acrobat.pdf',
    'Type': 'Document',
    'content': '''
      #### document
      ![[linked_attachment.document.pdf]]
      #### original
      ![[linked_attachment.original.pdf]]
    ''',
    'tags': list([
      'new-test-pdfs',
      'paperless',
      'paperless/missing/document',
      'paperless/type/document',
    ]),
  })
# ---
# name: test_export[document_12]
  dict({
    'Date': '2025-05-01',
    'Import date': '2025-05-01T10:29:55.838063+00:00',
    'OCR result': '''
      Sample PDF
      This is a simple PDF file. Fun fun fun.
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus facilisis odio sed mi.
      Curabitur suscipit. Nullam vel nisi. Etiam semper ipsum ut lectus. Proin aliquam, erat eget
      pharetra commodo, eros mi condimentum quam, sed commodo justo quam ut velit.
      Integer a erat. Cras laoreet ligula cursus enim. Aenean scelerisque velit et tellus.
      Vestibulum dictum aliquet sem. Nulla facilisi. Vestibulum accumsan ante vitae elit. Nulla
      erat dolor, blandit in, rutrum quis, semper pulvinar, enim. Nullam varius congue risus.
      Vivamus sollicitudin, metus ut interdum eleifend, nisi tellus pellentesque elit, tristique
      accumsan eros quam et risus. Suspendisse libero odio, mattis sit amet, aliquet eget,
      hendrerit vel, nulla. Sed vitae augue. Aliquam erat volutpat. Aliquam feugiat vulputate nisl.
      Suspendisse quis nulla pretium ante pretium mollis. Proin velit ligula, sagittis at, egestas a,
      pulvinar quis, nisl.
      Pellentesque sit amet lectus. Praesent pulvinar, nunc quis iaculis sagittis, justo quam
      lobortis tortor, sed vestibulum dui metus venenatis est. Nunc cursus ligula. Nulla facilisi.
      Phasellus ullamcorper consectetuer ante. Duis tincidunt, urna id condimentum luctus, nibh
      ante vulputate sapien, id sagittis massa orci ut enim. Pellentesque vestibulum convallis
      sem. Nulla consequat quam ut nisl. Nullam est. Curabitur tincidunt dapibus lorem. Proin
      velit turpis, scelerisque sit amet, iaculis nec, rhoncus ac, ipsum. Phasellus lorem arcu,
      feugiat eu, gravida eu, consequat molestie, ipsum. Nullam vel est ut ipsum volutpat
      feugiat. Aenean pellentesque.
      In mauris. Pellentesque dui nisi, iaculis eu, rhoncus in, venenatis ac, ante. Ut odio justo,
      scelerisque vel, facilisis non, commodo a, pede. Cras nec massa sit amet tortor volutpat
      varius. Donec lacinia, neque a luctus aliquet, pede massa imperdiet ante, at varius lorem
      pede sed sapien. Fusce erat nibh, aliquet in, eleifend eget, commodo eget, erat. Fusce
      consectetuer. Cras risus tortor, porttitor nec, tristique sed, convallis semper, eros. Fusce
      vulputate ipsum a mauris. Phasellus mollis. Curabitur sed urna. Aliquam nec sapien non
      nibh pulvinar convallis. Vivamus facilisis augue quis quam. Proin cursus aliquet metus.
      Suspendisse lacinia. Nulla at tellus ac turpis eleifend scelerisque. Maecenas a pede vitae
      enim commodo interdum. Donec odio. Sed sollicitudin dui vitae justo.
      Morbi elit nunc, facilisis a, mollis a, molestie at, lectus. Suspendisse eget mauris eu tellus
      molestie cursus. Duis ut magna at justo dignissim condimentum. Cum sociis natoque
      penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus varius. Ut sit
      amet diam suscipit mauris ornare aliquam. Sed varius. Duis arcu. Etiam tristique massa
      eget dui. Phasellus congue. Aenean est erat, tincidunt eget, venenatis quis, commodo at,
      quam.
    ''',
    'Original filename': 'sample.pdf',
    'Type': 'Document',
    'content': '''
      #### document
      ![[linked_attachment.document.pdf]]
      #### original
      ![[linked_attachment.original.pdf]]
    ''',
    'tags': list([
      'paperless',
      'paperless/missing/document',
      'paperless/type/document',
    ]),
  })
# ---
# name: test_export[document_13]
  dict({
    'Date': '2025-05-01',
    'Import date': '2025-05-01T22:36:54.529878+00:00',
    'In inbox': True,
    'OCR result': '''
      Lorem ipsum
      Lorem ipsum dolor sit amet, consectetur adipiscing
      elit. Nunc ac faucibus odio.
      Vestibulum neque massa, scelerisque sit amet ligula eu, congue molestie mi. Praesent ut
      varius sem. Nullam at porttitor arcu, nec lacinia nisi. Ut ac dolor vitae odio interdum
      condimentum. Vivamus dapibus sodales ex, vitae malesuada ipsum cursus
      convallis. Maecenas sed egestas nulla, ac condimentum orci. Mauris diam felis,
      vulputate ac suscipit et, iaculis non est. Curabitur semper arcu ac ligula semper, nec luctus
      nisl blandit. Integer lacinia ante ac libero lobortis imperdiet. Nullam mollis convallis ipsum,
      ac accumsan nunc vehicula vitae. Nulla eget justo in felis tristique fringilla. Morbi sit amet
      tortor quis risus auctor condimentum. Morbi in ullamcorper elit. Nulla iaculis tellus sit amet
      mauris tempus fringilla.
      Maecenas mauris lectus, lobortis et purus mattis, blandit dictum tellus.
       Maecenas non lorem quis tellus placerat varius.
       Nulla facilisi.
       Aenean congue fringilla justo ut aliquam.
       Mauris id ex erat. Nunc vulputate neque vitae justo facilisis, non condimentum ante
      sagittis.
       Morbi viverra semper lorem nec molestie.
       Maecenas tincidunt est efficitur ligula euismod, sit amet ornare est vulputate.
      12
      10
      8
      6
      4
      2
      0
      Column 1
      Column 2
      Column 3
      Row 1 Row 2 Row 3 Row 4
      In non mauris justo. Duis vehicula mi vel mi pretium, a viverra erat efficitur. Cras aliquam
      est ac eros varius, id iaculis dui auctor. Duis pretium neque ligula, et pulvinar mi placerat
      et. Nulla nec nunc sit amet nunc posuere vestibulum. Ut id neque eget tortor mattis
      tristique. Donec ante est, blandit sit amet tristique vel, lacinia pulvinar arcu. Pellentesque
      scelerisque fermentum erat, id posuere justo pulvinar ut. Cras id eros sed enim aliquam
      lobortis. Sed lobortis nisl ut eros efficitur tincidunt. Cras justo mi, porttitor quis mattis vel,
      ultricies ut purus. Ut facilisis et lacus eu cursus.
      In eleifend velit vitae libero sollicitudin euismod. Fusce vitae vestibulum velit. Pellentesque
      vulputate lectus quis pellentesque commodo. Aliquam erat volutpat. Vestibulum in egestas
      velit. Pellentesque fermentum nisl vitae fringilla venenatis. Etiam id mauris vitae orci
      maximus ultricies.
      Cras fringilla ipsum magna, in fringilla dui commodo
      a.
      Lorem ipsum 1 In eleifend velit vitae libero sollicitudin euismod. Lorem
      Lorem ipsum Lorem ipsum
      2 Cras fringilla ipsum magna, in fringilla dui commodo
      Ipsum
      a.
      3 Aliquam erat volutpat. Lorem
      4 Fusce vitae vestibulum velit. Lorem
      5 Etiam vehicula luctus fermentum. Ipsum
      Etiam vehicula luctus fermentum. In vel metus congue, pulvinar lectus vel, fermentum dui.
      Maecenas ante orci, egestas ut aliquet sit amet, sagittis a magna. Aliquam ante quam,
      pellentesque ut dignissim quis, laoreet eget est. Aliquam erat volutpat. Class aptent taciti
      sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut ullamcorper
      justo sapien, in cursus libero viverra eget. Vivamus auctor imperdiet urna, at pulvinar leo
      posuere laoreet. Suspendisse neque nisl, fringilla at iaculis scelerisque, ornare vel dolor. Ut
      et pulvinar nunc. Pellentesque fringilla mollis efficitur. Nullam venenatis commodo
      imperdiet. Morbi velit neque, semper quis lorem quis, efficitur dignissim ipsum. Ut ac lorem
      sed turpis imperdiet eleifend sit amet id sapien.
      Lorem ipsum dolor sit amet, consectetur adipiscing
      elit.
      Nunc ac faucibus odio. Vestibulum neque massa, scelerisque sit amet ligula eu, congue
      molestie mi. Praesent ut varius sem. Nullam at porttitor arcu, nec lacinia nisi. Ut ac dolor
      vitae odio interdum condimentum. Vivamus dapibus sodales ex, vitae malesuada ipsum
      cursus convallis. Maecenas sed egestas nulla, ac condimentum orci. Mauris diam felis,
      vulputate ac suscipit et, iaculis non est. Curabitur semper arcu ac ligula semper, nec luctus
      nisl blandit. Integer lacinia ante ac libero lobortis imperdiet. Nullam mollis convallis ipsum,
      ac accumsan nunc vehicula vitae. Nulla eget justo in felis tristique fringilla. Morbi sit amet
      tortor quis risus auctor condimentum. Morbi in ullamcorper elit. Nulla iaculis tellus sit amet
      mauris tempus fringilla.
      Maecenas mauris lectus, lobortis et purus mattis, blandit
      dictum tellus.
      Maecenas non lorem quis tellus placerat varius. Nulla facilisi. Aenean congue fringilla justo
      ut aliquam. Mauris id ex erat. Nunc vulputate neque vitae justo facilisis, non condimentum
      ante sagittis. Morbi viverra semper lorem nec molestie. Maecenas tincidunt est efficitur
      ligula euismod, sit amet ornare est vulputate.
      In non mauris justo. Duis vehicula mi vel mi pretium, a viverra erat efficitur. Cras aliquam
      est ac eros varius, id iaculis dui auctor. Duis pretium neque ligula, et pulvinar mi placerat
      et. Nulla nec nunc sit amet nunc posuere vestibulum. Ut id neque eget tortor mattis
      tristique. Donec ante est, blandit sit amet tristique vel, lacinia pulvinar arcu. Pellentesque
      scelerisque fermentum erat, id posuere justo pulvinar ut. Cras id eros sed enim aliquam
      lobortis. Sed lobortis nisl ut eros efficitur tincidunt. Cras justo mi, porttitor quis mattis vel,
      ultricies ut purus. Ut facilisis et lacus eu cursus.
      In eleifend velit vitae libero sollicitudin euismod.
      Fusce vitae vestibulum velit. Pellentesque vulputate lectus quis pellentesque commodo.
      Aliquam erat volutpat. Vestibulum in egestas velit. Pellentesque fermentum nisl vitae
      fringilla venenatis. Etiam id mauris vitae orci maximus ultricies. Cras fringilla ipsum
      magna, in fringilla dui commodo a.
      Etiam vehicula luctus fermentum. In vel metus congue, pulvinar lectus vel, fermentum dui.
      Maecenas ante orci, egestas ut aliquet sit amet, sagittis a magna. Aliquam ante quam,
      pellentesque ut dignissim quis, laoreet eget est. Aliquam erat volutpat. Class aptent taciti
      sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut ullamcorper
      justo sapien, in cursus libero viverra eget. Vivamus auctor imperdiet urna, at pulvinar leo
      posuere laoreet. Suspendisse neque nisl, fringilla at iaculis scelerisque, ornare vel dolor. Ut
      et pulvinar nunc. Pellentesque fringilla mollis efficitur. Nullam venenatis commodo
      imperdiet. Morbi velit neque, semper quis lorem quis, efficitur dignissim ipsum. Ut ac lorem
      sed turpis imperdiet eleifend sit amet id sapien.
    ''',
    'Original filename': 'file-sample_150kB_mit_ü.pdf',
    'Type': 'Document',
    'content': '''
      #### document
      ![[linked_attachment.document.pdf]]
      #### original
      ![[linked_attachment.original.pdf]]
    ''',
    'tags': list([
      'paperless',
      'paperless/missing/document',
      'paperless/type/document',
      'süper',
    ]),
  })
# ---
# name: test_export[document_1]
  dict({
    'Category': 'Software/Hardware',
    'Collection paths': list([
      'My collection',
      'Test Folder/Another collection',
    ]),
    'Date': '2025-04-18',
    'Import date': '2025-04-18T19:19:08.763928+00:00',
    'OCR result': '''
      CPB Software (Germany) GmbH - Im Bruch 3 - 63897 Miltenberg/Main
      Musterkunde AG
      Mr. John Doe
      Musterstr. 23
      12345 Musterstadt Name: Stefanie Müller
      Phone: +49 9371 9786-0
      Invoice WMACCESS Internet
      VAT No. DE199378386
      Invoice No
      Customer No
      Invoice Period
      Date
      123100401
      12345
      01.02.2024 - 29.02.2024
      1. März 2024
      Service Description Amount
      -without VAT- quantity
      Total Amount
      Basic Fee wmView
      130,00 € 1
      130,00 €
      Basis fee for additional user accounts 10,00 € 0
      0,00 €
      Basic Fee wmPos
      50,00 € 0
      0,00 €
      Basic Fee wmGuide
      1.000,00 € 0
      0,00 €
      Change of user accounts
      10,00 € 0
      0,00 €
      Transaction Fee T1
      0,58 € 14
      8,12 €
      Transaction Fee T2 0,70 € 0
      0,00 €
      Transaction Fee T3
      1,50 € 162
      243,00 €
      Transaction Fee T4
      0,50 € 0
      0,00 €
      Transaction Fee T5 0,80 € 0
      0,00 €
      Transaction Fee T6 1,80 € 0
      0,00 €
      Transaction Fee G1 0,30 € 0
      0,00 €
      Transaction Fee G2
      0,30 € 0
      0,00 €
      Transaction Fee G3 0,40 € 0
      0,00 €
      Transaction Fee G4
      0,40 € 0
      0,00 €
      Transaction Fee G5 0,30 € 0
      0,00 €
      Transaction Fee G6 0,30 € 0
      0,00 €
      Total 381,12 €
      VAT 19 % 72,41 €
      Gross Amount incl. VAT 453,53 €
      Terms of Payment: Immediate payment without discount. Any bank charges must be paid by the invoice recipient.
      Bank fees at our expense will be charged to the invoice recipient!
      Please credit the amount invoiced to IBAN DE29 1234 5678 9012 3456 78 | BIC GENODE51MIC (SEPA Credit Transfer)
      This invoice is generated automatically and will not be signed
      Invoice Details
      Period: 01.02.2024 to 29.02.2024
      Unit: Musterkunde AG 12345
      Request sections: T1: T2: T3: T4: T5: T6: G1: G2: G3: G4: G5: G6:
      Amount in Euro: 0,58 0,70 1,50 0,50 0,80 1,80 0,30 0,30 0,40 0,40 0,30 0,30
      user-account-1 10 0 99 0 0 0 0 0 0 0 0 0 154,30 €
      user-account-2 4 0 63 0 0 0 0 0 0 0 0 0 96,82 €
      Transaction Fee Seg T1: T2: T3: T4: T5: T6: G1: G2: G3: G4: G5: G6:
      Queries in Total: 14 0 162 0 0 0 0 0 0 0 0 0
      Total in Euro: 8,12 € 0,00 € 243,00 € 0,00 € 0,00 € 0,00 € 0,00 € 0,00 € 0,00 € 0,00 € 0,00 € 0,00 € 251,12 €
      The explanation of the query fee categories (T1 to T6 and G1 to G6) can be found on our website:
      https://www.wmaccess.com/abfragekategorien
      Invoice Details for wmView Query Reference
      Period: 01.02.2024 to 29.02.2024
      Unit: Musterkunde AG 12345
      wmview, wmProfile and User Profiles Query Segments:
      Query Reference:
      T1: T2: T3: T4: T5: T6:
      *Not specified*
      4 0 9 0 0 0
      AZR/31/27439
      0 0 12 0 0 0
      CCL/3715
      0 0 4 0 0 0
      CRS/28432
      5 0 36 0 0 0
      Cs/52113
      0 0 19 0 0 0
      GS 32090 1 0 7 0 0 0
      Kpi/22695 2 0 6 0 0 0
      PG 7772
      0 0 11 0 0 0
      Rjn/11138
      0 0 15 0 0 0
      SF-M 596/99-08 0 0 5 0 0 0
      Ttrb/17885 1 0 23 0 0 0
      WPN:24791 1 0 4 0 0 0
      Wwt/15658
      0 0 11 0 0 0
      Price for each Query in Euro:
      0,58 0,70 1,50 0,50 0,80 1,80
      15,82 €
      18,00 €
      6,00 €
      56,90 €
      28,50 €
      11,08 €
      10,16 €
      16,50 €
      22,50 €
      7,50 €
      35,08 €
      6,58 €
      16,50 €
    ''',
    'Original filename': 'sample-invoice.pdf',
    'Subcategory': 'My subcategory',
    'Type': 'Email',
    'content': '''
      Some notes to the doc here
      
      -----
      #### document
      ![[linked_attachment.document.pdf]]
      #### original
      ![[linked_attachment.original.pdf]]
    ''',
    'tags': list([
      'another-tag',
      'my-collection',
      'my-subcategory',
      'my-tag',
      'paperless',
      'paperless/missing/document',
      'paperless/type/email',
      'software-hardware',
      'test-folder/another-collection',
    ]),
  })
# ---
# name: test_export[document_2]
  dict({
    'Amount': 93.5,
    'Date': '2025-04-18',
    'Import date': '2025-04-18T21:22:35.167018+00:00',
    'In inbox': True,
    'OCR result': '''
      Invoice
      Invoice Number INV-3337
      From:
      DEMO - Sliced Invoices
      Suite 5A-1204
      123 Somewhere Street
      Your City AZ 12345
      admin@slicedinvoices.com
      Order Number 12345
      Invoice Date January 25, 2016
      Due Date January 31, 2016
      Total Due $93.50
      To:
      Test Business
      123 Somewhere St
      Melbourne, VIC 3000
      test@test.com
      Hrs/Qty Service 1.00 Web Design
      This is a sample description... ANZ Bank
      ACC # 1234 1234
      BSB # 4321 432
      Paid
      Rate/Price $85.00 Adjust Sub Total
      0.00% $85.00
      Sub Total $85.00
      Tax $8.50
      Total $93.50
      Payment is due within 30 days from date of invoice. Late payment is subject to fees of 5% per month.
      Thanks for choosing DEMO - Sliced Invoices | admin@slicedinvoices.com
      Page 1/1
    ''',
    'Original filename': 'wordpress-pdf-invoice-plugin-sample.pdf',
    'Payment method': 'Discover',
    'Tax/VAT': 8.5,
    'Type': 'Receipt',
    'content': '''
      #### document
      ![[linked_attachment.document.pdf]]
      #### original
      ![[linked_attachment.original.pdf]]
    ''',
    'tags': list([
      'paperless',
      'paperless/missing/document',
      'paperless/type/receipt',
    ]),
  })
# ---
# name: test_export[document_3]
  dict({
    'Date': '2025-04-24',
    'Import date': '2025-04-23T23:24:59.945056+00:00',
    'In inbox': True,
    'OCR result': '''
      CPB Software (Germany) GmbH - Im Bruch 3 - 63897 Miltenberg/Main
      Musterkunde AG
      Mr. John Doe
      Musterstr. 23
      12345 Musterstadt Name: Stefanie Müller
      Phone: +49 9371 9786-0
      Invoice WMACCESS Internet
      VAT No. DE199378386
      Invoice No
      Customer No
      Invoice Period
      Date
      123100401
      12345
      01.02.2024 - 29.02.2024
      1. März 2024
      Service Description Amount
      -without VAT- quantity
      Total Amount
      Basic Fee wmView
      130,00 € 1
      130,00 €
      Basis fee for additional user accounts 10,00 € 0
      0,00 €
      Basic Fee wmPos
      50,00 € 0
      0,00 €
      Basic Fee wmGuide
      1.000,00 € 0
      0,00 €
      Change of user accounts
      10,00 € 0
      0,00 €
      Transaction Fee T1
      0,58 € 14
      8,12 €
      Transaction Fee T2 0,70 € 0
      0,00 €
      Transaction Fee T3
      1,50 € 162
      243,00 €
      Transaction Fee T4
      0,50 € 0
      0,00 €
      Transaction Fee T5 0,80 € 0
      0,00 €
      Transaction Fee T6 1,80 € 0
      0,00 €
      Transaction Fee G1 0,30 € 0
      0,00 €
      Transaction Fee G2
      0,30 € 0
      0,00 €
      Transaction Fee G3 0,40 € 0
      0,00 €
      Transaction Fee G4
      0,40 € 0
      0,00 €
      Transaction Fee G5 0,30 € 0
      0,00 €
      Transaction Fee G6 0,30 € 0
      0,00 €
      Total 381,12 €
      VAT 19 % 72,41 €
      Gross Amount incl. VAT 453,53 €
      Terms of Payment: Immediate payment without discount. Any bank charges must be paid by the invoice recipient.
      Bank fees at our expense will be charged to the invoice recipient!
      Please credit the amount invoiced to IBAN DE29 1234 5678 9012 3456 78 | BIC GENODE51MIC (SEPA Credit Transfer)
      This invoice is generated automatically and will not be signed
      Invoice Details
      Period: 01.02.2024 to 29.02.2024
      Unit: Musterkunde AG 12345
      Request sections: T1: T2: T3: T4: T5: T6: G1: G2: G3: G4: G5: G6:
      Amount in Euro: 0,58 0,70 1,50 0,50 0,80 1,80 0,30 0,30 0,40 0,40 0,30 0,30
      user-account-1 10 0 99 0 0 0 0 0 0 0 0 0 154,30 €
      user-account-2 4 0 63 0 0 0 0 0 0 0 0 0 96,82 €
      Transaction Fee Seg T1: T2: T3: T4: T5: T6: G1: G2: G3: G4: G5: G6:
      Queries in Total: 14 0 162 0 0 0 0 0 0 0 0 0
      Total in Euro: 8,12 € 0,00 € 243,00 € 0,00 € 0,00 € 0,00 € 0,00 € 0,00 € 0,00 € 0,00 € 0,00 € 0,00 € 251,12 €
      The explanation of the query fee categories (T1 to T6 and G1 to G6) can be found on our website:
      https://www.wmaccess.com/abfragekategorien
      Invoice Details for wmView Query Reference
      Period: 01.02.2024 to 29.02.2024
      Unit: Musterkunde AG 12345
      wmview, wmProfile and User Profiles Query Segments:
      Query Reference:
      T1: T2: T3: T4: T5: T6:
      *Not specified*
      4 0 9 0 0 0
      AZR/31/27439
      0 0 12 0 0 0
      CCL/3715
      0 0 4 0 0 0
      CRS/28432
      5 0 36 0 0 0
      Cs/52113
      0 0 19 0 0 0
      GS 32090 1 0 7 0 0 0
      Kpi/22695 2 0 6 0 0 0
      PG 7772
      0 0 11 0 0 0
      Rjn/11138
      0 0 15 0 0 0
      SF-M 596/99-08 0 0 5 0 0 0
      Ttrb/17885 1 0 23 0 0 0
      WPN:24791 1 0 4 0 0 0
      Wwt/15658
      0 0 11 0 0 0
      Price for each Query in Euro:
      0,58 0,70 1,50 0,50 0,80 1,80
      15,82 €
      18,00 €
      6,00 €
      56,90 €
      28,50 €
      11,08 €
      10,16 €
      16,50 €
      22,50 €
      7,50 €
      35,08 €
      6,58 €
      16,50 €
    ''',
    'Original filename': 'sample-invoice.pdf',
    'Type': 'Document',
    'content': '''
      #### document
      ![[linked_attachment.document.pdf]]
      #### original
      ![[linked_attachment.original.pdf]]
    ''',
    'tags': list([
      'paperless',
      'paperless/missing/document',
      'paperless/type/document',
    ]),
  })
# ---
# name: test_export[document_4]
  dict({
    'Date': '2025-04-25',
    'Import date': '2025-04-24T23:39:03.893648+00:00',
    'In inbox': True,
    'OCR result': 'Dummy PDF file',
    'Original filename': 'dummy (1).pdf',
    'Type': 'Document',
    'content': '''
      #### document
      ![[linked_attachment.document.pdf]]
      #### original
      ![[linked_attachment.original.pdf]]
    ''',
    'tags': list([
      'paperless',
      'paperless/missing/document',
      'paperless/type/document',
    ]),
  })
# ---
# name: test_export[document_5]
  dict({
    'Collection paths': list([
      'New Test PDFs',
    ]),
    'Date': '2025-05-01',
    'Import date': '2025-05-01T10:03:27.906101+00:00',
    'OCR result': '''
      PDF Test File
      Congratulations, your computer is equipped with a PDF (Portable Document Format)
      reader! You should be able to view any of the PDF documents and forms available on
      our site. PDF forms are indicated by these icons: or .
      Yukon Department of Education
      Box 2703
      Whitehorse,Yukon
      Canada
      Y1A 2C6
      Please visit our website at: http://www.education.gov.yk.ca/
    ''',
    'Original filename': 'pdf-test.pdf',
    'Type': 'Document',
    'content': '''
      #### document
      ![[linked_attachment.document.pdf]]
      #### original
      ![[linked_attachment.original.pdf]]
    ''',
    'tags': list([
      'new-test-pdfs',
      'paperless',
      'paperless/missing/document',
      'paperless/type/document',
    ]),
  })
# ---
# name: test_export[document_6]
  dict({
    'Collection paths': list([
      'New Test PDFs',
    ]),
    'Date': '2025-05-01',
    'Import date': '2025-05-01T10:03:28.098296+00:00',
    'OCR result': '''
      DrylabNews
      for investors & friends · May 2017
      Welcome to our first newsletter of 2017! It's
      been a while since the last one, and a lot has
      happened. We promise to keep them coming
      every two months hereafter, and permit
      ourselves to make this one rather long. The
      big news is the beginnings of our launch in
      the American market, but there are also
      interesting updates on sales, development,
      mentors and (of course) the investment
      round that closed in January.
      New capital:The investment round was
      successful. We raised 2.13 MNOK to match
      the 2.05 MNOK loan from Innovation
      Norway. Including the development
      agreement with Filmlance International, the
      total new capital is 5 MNOK, partly tied to
      the successful completion of milestones. All
      formalities associated with this process are
      now finalized.
      New owners:We would especially like to
      warmly welcome our new owners to the
      Drylab family: Unni Jacobsen, Torstein Jahr,
      Suzanne Bolstad, Eivind Bergene, Turid Brun,
      Vigdis Trondsen, Lea Blindheim, Kristine
      34
      Academy of Motion Picture Arts and Sciences· Alesha & Jamie Metzger· Amazon
      AWS· Apple· Caitlin Burns, PGA· Carlos Melcer· Chimney L.A.· Dado Valentic·
      DaveStump·DITWIT·ERANYC·Facebook·FancyFilm·FilmLight·GeoLabelle·
      meetings meetings
      Google· IBM· Innovation Norway (NYC)· Innovation Norway (SF)· International
      NY · SF NY · SF
      Cinematographers Guild· NBC· Local 871· Netflix· Pomfort· Radiant Images·
      LA · L LA · LV V
      Screening Room· Signiant· Moods of Norway· Tapad· Team Downey
      Holmsen, Torstein Hansen, and Jostein
      Aanensen. We look forward to working with
      you!
      Sales:Return customer rate is now 80%,
      proving value and willingness to pay. Film
      Factory Montreal is our first customer in
      Canada. Lumiere Numeriques have started
      using us in France. We also have new
      customers in Norway, and high-profile users
      such as Gareth Unwin, producer of Oscar-
      winningThe King's Speech. Revenue for the
      first four months is 200 kNOK, compared to
      339 kNOK for all of 2016. We are working
      on a partnership to safeguard sales in
      Norway while beginning to focus more on
      the US.
      New team members:We've extended our
      organization with two permanent developers
      based in Łódź, the film capital of Poland. Two
      highly skilled interns from the University of
      Oslo's Entrepreneurship Program, will be
      working on market research until mid-June
      (starting in March), preparing for the US
      launch. Also, two computer science students
      are working as part-time interns during
      spring, on machine learning and analysis
      research, as well as innovative architectures
      based on the Swift language. We hope our
      interns will consider sticking around!
      New mentor:We are honored to have
      Caitlin Burns joining us as a mentor. She's an
      accomplished producer based in New York,
      an active member of the Producers Guild of
      America, and the collaboration has already
      yielded good results, including valuable
      contacts for our visit in Los Angeles. Oscar-
      winning VFX supervisorDave Stumpjoined
      us earlier.
      New York, St. Louis, San Francisco and
      Los Angeles:Pontus and Audun did a tour
      of the US in February and March, meeting
      users, partners and potential customers. The
      trip was very successful, with several high
      points, including meetings with Netflix, the
      Academy of Motion Picture Arts and
      Sciences, the International
      Cinematographers Guild, Local 871 (the
      script supervisors' union), one of the world's
      leading DITs, and Apple. See the separate
      attachment for a more detailed summary.
      NAB:Andreas and Audun travelled to the
      National Association of Broadcasters
      convention (NAB) in Las Vegas for three
      hectic days in April. NAB gathers 100,000
      participants from film and TV. It's a very
      efficient way of meeting people in the
      business, and getting an updated picture of
      the business landscape. The most exciting
      meeting was with PIX System, one of our
      most important competitors. It was
      interesting to note that they regarded the
      indie market as bigger than their own.
      Andreas was able to secure us an
      invitation to the DIT-WIT party, with some of
      the world's leading DITs in attendance. It was
      a great place for informal feedback on Drylab
      Viewer. The pattern was the same as for
      other users: Initial polite interest turns to
      real enthusiasm the moment someone is able
      to personally try Drylab Viewer! We also
      met with Pomfort and Apple about our on-
      going collaborations; ARRI and Teradek/
      Paralinx about camera integration; Amazon,
      Google and IBM about cloud computing.
      WWDC and Silicon Valley:We were very
      pleasantly surprised to be invited by Apple to
      their World Wide Developers Conference in
      San Jose in June, despite not having applied.
      It's a valuable chance to learn and make new
      connections. We’re also setting aside time to
      meet other potential partners.
      Cine Gear:We have decided not to attend
      the Cine Gear expo in L.A. this year, since
      feedback from many users about the show
      were mixed, and our planned beta version of
      3.0 is slightly delayed.
      Development and launch:Development
      is around one month behind our original
      schedule. We expect the delay to decrease,
      with new developers on board.
      The launch of Drylab 3.0 will take place at
      the International Broadcasters Convention
      in Amsterdam in September, and we are
      working hard to get solid feedback from pilot
      users before then.
      Annual General Meeting:Drylab's AGM
      will be held on June 16th at 15:00. An
      invitation will be distributed to all owners
      well in advance. We hope to see you there!
      As you can see it has been a hectic
      spring that has given us a lot of
      confirmation about our product. We
      are now working eagerly and hard
      towards the US launch with Drylab
      3.0, while keeping momentum in
      Europe with our existing system.
      [Drylabhas kindly allowed this newsletter to be redone in HTML/CSS and converted to PDF
      withPrince.Navngenhelped anonymize names in the process.]
    ''',
    'Original filename': 'drylab.pdf',
    'Type': 'Document',
    'content': '''
      #### document
      ![[linked_attachment.document.pdf]]
      #### original
      ![[linked_attachment.original.pdf]]
    ''',
    'tags': list([
      'new-test-pdfs',
      'paperless',
      'paperless/missing/document',
      'paperless/type/document',
    ]),
  })
# ---
# name: test_export[document_7]
  dict({
    'Collection paths': list([
      'New Test PDFs',
    ]),
    'Date': '2025-05-01',
    'Import date': '2025-05-01T10:03:28.924438+00:00',
    'OCR result': '''
      Denny Gunawan
      221 Queen St
      Melbourne VIC 3000
      123 Somewhere St, Melbourne VIC 3000
      (03) 1234 5678
      $39.60
      Invoice Number: #20130304
      Organic Items Price/kg Quantity(kg) Subtotal
      Apple $5.00 1 $5.00
      Orange $1.99 2 $3.98
      Watermelon $1.69 3 $5.07
      Mango $9.56 2 $19.12
      Peach $2.99 1 $2.99
      Subtotal $36.00
      GST (10%) $3.60
      Total $39.60
      * Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales
      dapibus fermentum. Nunc adipiscing, magna sed scelerisque cursus, erat
      lectus dapibus urna, sed facilisis leo dui et ipsum.
    ''',
    'Original filename': 'invoicesample.pdf',
    'Type': 'Document',
    'content': '''
      #### document
      ![[linked_attachment.document.pdf]]
      #### original
      ![[linked_attachment.original.pdf]]
    ''',
    'tags': list([
      '_200',
      'new-test-pdfs',
      'paperless',
      'paperless/missing/document',
      'paperless/type/document',
    ]),
  })
# ---
# name: test_export[document_8]
  dict({
    'Collection paths': list([
      'New Test PDFs',
    ]),
    'Date': '2025-05-01',
    'Import date': '2025-05-01T10:03:29.159375+00:00',
    'OCR result': '''
      Test Page
      This is a Portable Document File (PDF)
      Commonly associated with Adobe Acrobat Reader
      If you are able to read this PDF file, software is installed on your computer
      capable of displaying this file type. PDF files generally are for display purposes
      and cannot be edited with common software tools.
      Test Complete, you may close this File.
    ''',
    'Original filename': 'PDF_TestPage.pdf',
    'Type': 'Document',
    'content': '''
      #### document
      ![[linked_attachment.document.pdf]]
      #### original
      ![[linked_attachment.original.pdf]]
    ''',
    'tags': list([
      '100/200',
      'new-test-pdfs',
      'paperless',
      'paperless/missing/document',
      'paperless/type/document',
    ]),
  })
# ---
# name: test_export[document_9]
  dict({
    'Collection paths': list([
      'New Test PDFs',
    ]),
    'Date': '2025-05-01',
    'Import date': '2025-05-01T10:03:29.490730+00:00',
    'OCR result': '''
      Welcome to Smallpdf
      Ready to take document management to the next level?
      Digital Documents—All In One Place
      With the new Smallpdf experience, you can
      freely upload, organize, and share digital
      documents. When you enable the ‘Storage’
      option, we’ll also store all processed files here.
      Enhance Documents in One Click
      When you right-click on a file, we’ll present
      you with an array of options to convert,
      compress, or modify it.
      Access Files Anytime, Anywhere
      You can access files stored on Smallpdf from
      your computer, phone, or tablet. We’ll also
      sync files from the Smallpdf Mobile App to our
      online portal
      Collaborate With Others
      Forget mundane administrative tasks. With
      Smallpdf, you can request e-signatures, send
      large files, or even enable the Smallpdf G Suite
      App for your entire organization.
    ''',
    'Original filename': 'Get_Started_With_Smallpdf.pdf',
    'Type': 'Document',
    'content': '''
      #### document
      ![[linked_attachment.document.pdf]]
      #### original
      ![[linked_attachment.original.pdf]]
    ''',
    'tags': list([
      'new-test-pdfs',
      'paperless',
      'paperless/missing/document',
      'paperless/type/document',
    ]),
  })
# ---
# name: test_export[orphaned_file_1842b236]
  dict({
    'Type': 'Orphaned file',
    'content': '''
      #### document
      ![[linked_attachment.document.pdf]]
    ''',
    'tags': list([
      'paperless',
      'paperless/orphaned',
    ]),
  })
# ---
# name: test_export[tree]
  '''
  test_export0/
  ├── _attachments/
  │   ├── 2025-04-18_01_sample-invoice.document.pdf
  │   ├── 2025-04-18_02_wordpress-pdf-invoice-plugin-sample.document.pdf
  │   ├── 2025-04-24_03_sample-invoice.document.pdf
  │   ├── 2025-04-24_03_sample-invoice.original.pdf
  │   ├── 2025-04-25_04_missing.thumbnail.png
  │   ├── 2025-05-01_05_pdf-test.document.pdf
  │   ├── 2025-05-01_06_drylab.document.pdf
  │   ├── 2025-05-01_07_invoicesample.document.pdf
  │   ├── 2025-05-01_08_PDF_TestPage.document.pdf
  │   ├── 2025-05-01_09_Get_Started_With_Smallpdf.document.pdf
  │   ├── 2025-05-01_10_Free_Test_Data_100KB_PDF.document.pdf
  │   ├── 2025-05-01_11_test_pdf_acrobat.document.pdf
  │   ├── 2025-05-01_12_sample_ _with_ special characters _o_ _.document.pdf
  │   ├── 2025-05-01_13_file-sample_150kB_mit_ü.document.unidecode.pdf
  │   └── orphaned_1842b236_orphaned-file.document.pdf
  ├── collections/
  │   ├── Test Folder/
  │   │   └── Another collection.md
  │   ├── Library.md
  │   ├── My collection.md
  │   └── New Test PDFs.md
  ├── drylab (6).md
  ├── file-sample_150kB_mit_ü (13).md
  ├── Free_Test_Data_100KB_PDF (10).md
  ├── Get_Started_With_Smallpdf (9).md
  ├── invoicesample (7).md
  ├── missing (4).md
  ├── Orphaned orphaned-file.md
  ├── pdf-test (5).md
  ├── PDF_TestPage (8).md
  ├── sample-invoice (1).md
  ├── sample-invoice (3).md
  ├── sample_ _with_ special characters _o_ _ (12).md
  ├── test_pdf_acrobat (11).md
  └── wordpress-pdf-invoice-plugin-sample (2).md
  
  '''
# ---
